syntax = "proto3";

package order;

option java_multiple_files = true;
option java_package = "com.janapure.microservices.proto";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc GetProductList(ProductListRequest) returns (ProductListResponse);
}

message ProductListRequest {
  string order_id = 1;
}

message ProductListResponse {
  repeated string product_ids = 1;
}